Actuslizacion de puntos

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -104,7 +104,7 @@ body {
     max-height: 70px;
 }
 .container-fluid {
-    background-color: #238DC1;
+    background-color: # ;
     border-color: #C4C4C4;
 }
 .navbar-default .navbar-nav > li > a {
