--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,8 +20,11 @@
              <a {{action 'goToFormas'}} >Formas de Inspección
              </a>
            </li>
-           <li id="menu2"><a href="javascript:goTo('puntos_inspeccion.html')">Puntos de Inspección</a></li>
-           <li id="menu3"><a href="javascript:goTo('seguimiento.html')">Seguimiento</a></li>
+           <li id="menu2"> <a {{action 'goToUsers'}} >Clientes
+             </a></li>
+           <li id="menu2"> <a {{action 'goToUsers'}} >Empleados
+             </a></li>  <li id="menu2"> <a {{action 'goToUsers'}} >Autos
+             </a></li>
            <li id="menu4"><a href="javascript:goTo('reportes.html')">Reportes</a></li>
          </ul>
          <ul class="nav navbar-nav navbar-right">
