--- a/app/templates/formas-de-inspeccion.hbs
+++ b/app/templates/formas-de-inspeccion.hbs
@@ -2,7 +2,7 @@
   <header class="topHeader">
     <div class="container-fluid">
       <div class="navbar-header">
-        <h2> <i class="fa fa-angle-right"></i> Listado de Formularios</h2>
+        <h2> <i class="fa fa-angle-right"></i> Listado de formas</h2>
       </div>
     </div>
   </header>
@@ -10,7 +10,7 @@
   <main class="container-fluid wrapper tramites-listado" role="main">
     <div class="clearfix">
       <div class="search-query pull-right">
-        {{input type="text" value=filter class="form-control search-small" placeholder="Buscar formularios..." }}
+        {{input type="text" value=filter class="form-control search-small" placeholder="Buscar formas..." }}
         <button class="search-submit" type="submit"><i class="fa fa-search"></i></button>
       </div>
 
@@ -183,7 +183,7 @@
         </tr>
         {{else}}
         <tr>
-          <td colspan="10" style="text-align:center;">No hay formularios disponibles.</td>
+          <td colspan="10" style="text-align:center;">No hay formas disponibles.</td>
         </tr>
         {{/each}}
 
