--- a/app/templates/formas/-form.hbs
+++ b/app/templates/formas/-form.hbs
@@ -1,2 +1,43 @@
-{{#view 'formularios.new'}}
-{{/view}}
+
+<!-- panel información básica -->
+<div class="panel panel-white">
+
+	<section class="panel-body">
+		<div class="container-fluid clearfix">
+			<div class="row line-border">
+
+				<div class="col-sm-12 ">
+					<div class="form-group">
+						<label class="label-title">Tipo de forma</label>
+						
+					</div>
+				</div>
+
+				<div class="col-sm-6 ">
+					<div class="form-group">
+						<label class="label-title">Estatus de la inspecciòn</label>
+						<input type="text" name="nota" value="estatus">
+					</div>
+				</div>
+				<div class="col-sm-3 ">
+					<div class="form-group">
+						<label class="label-title">Nota</label>
+<input type="text" name="nota" value="nota">
+
+					</div>
+				</div>
+
+				<div class="col-sm-6 ">
+					<div class="form-group">
+						<label class="label-title">Placa</label>
+					<input type="text" name="placa" value="HVZNJO">
+					</div>
+				</div>
+
+			
+
+			</div>
+		</div>
+	</section>
+</div>
+
