--- a/app/templates/formas/edit.hbs
+++ b/app/templates/formas/edit.hbs
@@ -1,13 +1,13 @@
-<div class="main-wrapper">
+<div class="main-wrapper contenido container">
 	<header class=" topHeader">
-	  <div class="container-fluid">
+	  <div class="container-fluid ">
 	    <div class="navbar-header">
-	      <h2> <i class="fa fa-angle-right"></i> Editar  Formulario</h2>
+	      <h2> <i class="fa fa-angle-right"></i> Editar la formas de inspeccion</h2>
 	    </div>
 	  </div>
 	</header>
-	<main class="container-fluid wrapper tramite" role="main">
+	<main class="container-fluid wrapper tramite " role="main">
 
-	{{partial "formularios/form"}}
+	{{partial "formas/form"}}
     </main>
 </div>
