--- a/app/templates/formas/new.hbs
+++ b/app/templates/formas/new.hbs
@@ -7,6 +7,6 @@
 	  </div>
 	</header>
 	<main class="container-fluid wrapper tramite" role="main">
-		{{partial "formularios/form"}}
+		{{partial "formas/form"}}
     </main>
 </div>	
