--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,7 +1,7 @@
 <div class="main-wrapper">
 
 </div>
-<div class="main-wrapper">
+<div class="main-wrapper container contenido">
   <main class="container-fluid wrapper" role="main">
     <div class="row">
       <div class="col-md-4">
@@ -25,14 +25,14 @@
                     <p> Reportes</p>
                   </a>
                 </div>
-                            {{#if isSelectedEstado}}
+                           
                 <div class="col-md-6">
                   <a {{action 'goToUsers'}} class="new-media-btn">
                     <i class="fa fa-users"></i>
                     <p>Nuevos Usuarios</p>
                   </a>
                 </div>  
-                {{/if}}                                       
+                                            
               </div>              
             </div>                  
           </section>
